Fixed context menu z-index

--- a/src/app/desktop/context-menu/context-menu.component.scss
+++ b/src/app/desktop/context-menu/context-menu.component.scss
@@ -7,4 +7,5 @@
   padding: 10px;
   display: inline;
   margin-left: -1px;
+  z-index: 2;
 }
