--- a/src/app/desktop/desktop.component.scss
+++ b/src/app/desktop/desktop.component.scss
@@ -6,43 +6,39 @@
 #desktop-surface {
   width: 100%;
   height: 94.5%;
-  background: url('../../assets/desktop/img/desktop-surface-background.png')
-    center no-repeat;
+  background: url('../../assets/desktop/img/desktop-surface-background.png') center no-repeat;
   background-size: cover;
   box-sizing: content-box;
   position: relative;
   overflow: hidden;
   z-index: 0;
-}
 
-#startmenu {
-  z-index: 1;
-}
+  .linkage {
+    color: white;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    user-select: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 1px 1px 2px rgb(0, 0, 0);
 
-.linkage {
-  color: white;
-  position: absolute;
-  width: 64px;
-  height: 64px;
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  user-select: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+    img {
+      border-radius: 10px;
+      width: 50px;
+      height: 50px;
+      pointer-events: none;
+    }
 
-  img {
-    border-radius: 10px;
-    width: 50px;
-    height: 50px;
-    pointer-events: none;
+    &:active img {
+      background-color: rgba(0, 0, 0, 0.45);
+      box-shadow: inset 0px 0px 1.5px 1.5px rgba(0, 0, 0, 0.45);
+    }
   }
 
-  &:active img {
-    background-color: rgba(0, 0, 0, 0.45);
-    box-shadow: inset 0px 0px 1.5px 1.5px rgba(0, 0, 0, 0.45);
-  }
 }
